[WEB-322] Fix pricing select height on Firefox

--- a/styles/components/_pricing-plan.scss
+++ b/styles/components/_pricing-plan.scss
@@ -59,7 +59,8 @@
         width: 100%;
         -webkit-appearance: none;
         -moz-appearance: none;
-        line-height: 44px;
+        line-height: 42px;
+        height: 44px;
         border-radius: $border-radius;
         border: 1px solid transparentize(#DBDEE3, .5);
         font-weight: 500;
